[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interactable/Button/Button.gd" type="Script" id=1]
[ext_resource path="res://Tileset/Atlas.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 3.99897, 2.41718 )

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 2.40178, 1.93107 )

[node name="Button" type="StaticBody2D"]
collision_mask = 31
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 48, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.38886 )
shape = SubResource( 1 )

[node name="PushArea" type="Area2D" parent="."]
position = Vector2( 0, -2.98605 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushArea"]
shape = SubResource( 2 )

[connection signal="body_entered" from="PushArea" to="." method="_on_push"]
[connection signal="body_exited" from="PushArea" to="." method="_on_released"]
